--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "next": "12.1.5",
+    "next-lib2": "^1.5.0",
     "prettier": "^2.6.2",
     "pretty": "^2.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-image-card-g3": "^0.1.0",
     "testpackageg3": "^1.0.0"
   },
   "devDependencies": {
