--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pretty": "^2.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-lib-g3": "^1.4.0",
     "testpackageg3": "^1.0.0"
   },
   "devDependencies": {
