--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "next": "12.1.5",
-    "next-lib-g3": "^0.2.0",
+    "next-lib-g3": "^0.5.0",
     "prettier": "^2.6.2",
     "pretty": "^2.0.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-lib-g3": "^1.4.0",
-    "testpackageg3": "^1.0.0"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
