--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "next": "12.1.5",
     "prettier": "^2.6.2",
     "pretty": "^2.0.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
     "@types/node": "17.0.25",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "autoprefixer": "^10.4.4",
     "dotenv": "^8.2.0",
