community section changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,14 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"]
-    },
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/pages/index.jsx",
+    "src/pages/community/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
