--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "next": "12.1.5",
-    "prettier": "^2.6.2"
+    "next-lib-g3": "^0.18.0",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
     "@types/node": "17.0.25",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "autoprefixer": "^10.4.4",
     "dotenv": "^8.2.0",
