--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "next": "12.1.5",
-    "next-lib-g3": "^0.18.0",
-    "prettier": "^2.6.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "prettier": "^2.6.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
