--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     "src/pages/index.jsx",
-    "src/pages/community/index.jsx"
+    "src/pages/community.jsx"
   ],
   "exclude": ["node_modules"]
 }
